--- a/playbooks/Apache_Content_v2_Loop.yaml
+++ b/playbooks/Apache_Content_v2_Loop.yaml
@@ -32,7 +32,7 @@
             - "index.html"
 
         - name: Restart Apache for Debian
-          ansible.builtin.service:
+          ansible.builtin.systemd_service:
             name: apache2
             state: restarted
 
@@ -58,6 +58,6 @@
             - "index.html"
 
         - name: Restart Apache Handler for RedHat
-          ansible.builtin.service:
+          ansible.builtin.systemd_service:
             name: httpd
             state: restarted
