--- a/playbooks/Apache_Content_v3_FileGlob.yaml
+++ b/playbooks/Apache_Content_v3_FileGlob.yaml
@@ -28,7 +28,7 @@
             - "{{ source_folder }}/*.*"
 
         - name: Restart Apache for Debian
-          ansible.builtin.service:
+          ansible.builtin.systemd_service:
             name: apache2
             state: restarted
 
@@ -50,6 +50,6 @@
             - "{{ source_folder }}/*.*"
 
         - name: Restart Apache Handler for RedHat
-          ansible.builtin.service:
+          ansible.builtin.systemd_service:
             name: httpd
             state: restarted
