--- a/playbooks/PasswordAuthentication_Yes.yaml
+++ b/playbooks/PasswordAuthentication_Yes.yaml
@@ -20,6 +20,6 @@
 
     - name: Restart SSH Service
       become: true
-      ansible.builtin.service:
+      ansible.builtin.systemd_service:
         name: ssh
         state: restarted
