--- a/playbooks/Service_Restart_Apache.yaml
+++ b/playbooks/Service_Restart_Apache.yaml
@@ -5,6 +5,6 @@
   tasks:
     - name: Restart Apache
       become: true
-      ansible.builtin.service:
+      ansible.builtin.systemd_service:
         name: apache2
         state: restarted
