--- a/playbooks/Service_Start_Apache.yaml
+++ b/playbooks/Service_Start_Apache.yaml
@@ -5,7 +5,7 @@
   tasks:
     - name: Start Apache
       become: true
-      ansible.builtin.service:
+      ansible.builtin.systemd_service:
         name: apache2
         enabled: true
         state: started
