--- a/playbooks/Service_Stop_Apache.yaml
+++ b/playbooks/Service_Stop_Apache.yaml
@@ -5,6 +5,6 @@
   tasks:
     - name: Stop Apache
       become: true
-      ansible.builtin.service:
+      ansible.builtin.systemd_service:
         name: apache2
         state: stopped
