--- a/playbooks/Update_Jenkins.yml
+++ b/playbooks/Update_Jenkins.yml
@@ -30,6 +30,6 @@
 
     - name: Restart Jenkins
       become: true
-      ansible.builtin.service:
+      ansible.builtin.systemd_service:
         name: jenkins
         state: restarted
