--- a/roles/chrony/handlers/main.yml
+++ b/roles/chrony/handlers/main.yml
@@ -1,16 +1,16 @@
 ---
 # handlers file for chrony
 
-- name: Restart Chrony Oracle
+- name: Restart Chrony RedHat
   become: true
-  ansible.builtin.service:
+  ansible.builtin.systemd_service:
     state: restarted
     name: chronyd
     enabled: true
 
 - name: Restart Chrony Ubuntu
   become: true
-  ansible.builtin.service:
+  ansible.builtin.systemd_service:
     state: restarted
     name: chrony
     enabled: true
