--- a/roles/dns/handlers/main.yml
+++ b/roles/dns/handlers/main.yml
@@ -3,7 +3,7 @@
 
 - name: Restart NetworkManager
   become: true
-  ansible.builtin.service:
+  ansible.builtin.systemd_service:
     state: restarted
     daemon_reload: true
     name: NetworkManager
