--- a/roles/install-keepalived/handlers/main.yml
+++ b/roles/install-keepalived/handlers/main.yml
@@ -2,7 +2,7 @@
 
 - name: Restart keepalived
   become: true
-  ansible.builtin.service:
+  ansible.builtin.systemd_service:
     state: restarted
     name: keepalived
     enabled: true
