--- a/roles/ntp/tasks/main.yml
+++ b/roles/ntp/tasks/main.yml
@@ -27,6 +27,6 @@
 
     - name: Restart NTP Ubuntu
       become: true
-      ansible.builtin.service:
+      ansible.builtin.systemd_service:
         state: restarted
         name: ntp
