--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,6 +2,8 @@
 host_key_checking = false
 
 # Use the YAML callback plugin.
-stdout_callback = yaml
+# stdout_callback = yaml
+stdout_callback = default
+result_format = yaml
 # Use the stdout_callback when running ad-hoc commands.
 bin_ansible_callbacks = True
