--- a/roles/sudoers/tasks/main.yml
+++ b/roles/sudoers/tasks/main.yml
@@ -11,11 +11,11 @@
     mode: "0440"
 
 - name: Вывести пользователей с UID >= 1000
-  shell: "awk -F: '$3 >= 1000 && $3 < 65534 { print $1 }' /etc/passwd"
+  ansible.builtin.shell: "awk -F: '$3 >= 1000 && $3 < 65534 { print $1 }' /etc/passwd"
   register: user_list
 
 - name: Показать пользователей
-  debug:
+  ansible.builtin.debug:
     var: user_list.stdout_lines
 
 - name: Отключить ввод sudo пароля для пользователей
