--- a/roles/install-alloy/tasks/main.yaml
+++ b/roles/install-alloy/tasks/main.yaml
@@ -16,102 +16,129 @@
     groups: systemd-journal
 
 # ================================================================
-#                          Install Alloy
+#                            Altlinux
 # ================================================================
 
-- name: Создание папку "{{ temp_folder }}"
-  ansible.builtin.file:
-    path: "{{ temp_folder }}"
-    state: directory
-    owner: root
-    group: root
-    mode: "0755"
-
-- name: Download Alloy
-  ansible.builtin.get_url:
-    url: "{{ alloy_tar_url }}"
-    dest: "{{ temp_folder }}/{{ alloy_tar_name }}"
-    owner: root
-    group: root
-    mode: "0644"
-
-- name: Распаковать Alloy в "{{ temp_folder }}"
-  ansible.builtin.unarchive:
-    src: "{{ temp_folder }}/{{ alloy_tar_name }}"
-    dest: "{{ temp_folder }}"
-    remote_src: true
-
-- name: Скопировать Alloy в "{{ alloy_install_folder }}"
+- name: Block for Altlinux
+  when: ansible_os_family == "Altlinux"
   become: true
-  ansible.builtin.copy:
-    src: "{{ temp_folder }}/alloy-linux-amd64"
-    dest: "{{ alloy_install_folder }}/alloy"
-    owner: root
-    group: root
-    mode: "0755"
-    remote_src: true
+  block:
+
+    - name: Install Alloy in Altlinux
+      community.general.apt_rpm:
+        pkg:
+          - alloy
+        state: latest
+        update_cache: true
+      notify:
+        - Start Alloy
 
 # ================================================================
-#                        Environment Alloy
+#                         Not Altlinux
 # ================================================================
 
-- name: Создание папку "{{ alloy_environment_folder }}"
-  ansible.builtin.file:
-    path: "{{ alloy_environment_folder }}"
-    state: directory
-    owner: "{{ alloy_username }}"
-    group: "{{ alloy_username }}"
-    mode: "0755"
+- name: Block for not Altlinux
+  when: ansible_os_family != "Altlinux"
+  become: true
+  block:
 
-- name: Скопировать environment file в "{{ alloy_environment_folder }}"
-  ansible.builtin.template:
-    src: "{{ alloy_environment_file }}.j2"
-    dest: "{{ alloy_environment_folder }}/{{ alloy_environment_file }}"
-    owner: "{{ alloy_username }}"
-    group: "{{ alloy_username }}"
-    mode: "0644"
+    # ============================================
+    #               Install Alloy
+    # ============================================
 
-# ================================================================
-#                      Сконфигурировать Alloy
-# ================================================================
+    - name: Создание папку "{{ temp_folder }}"
+      ansible.builtin.file:
+        path: "{{ temp_folder }}"
+        state: directory
+        owner: root
+        group: root
+        mode: "0755"
 
-- name: Создание папку "{{ alloy_config_folder }}"
-  ansible.builtin.file:
-    path: "{{ alloy_config_folder }}"
-    state: directory
-    owner: "{{ alloy_username }}"
-    group: "{{ alloy_username }}"
-    mode: "0755"
+    - name: Download Alloy
+      ansible.builtin.get_url:
+        url: "{{ alloy_tar_url }}"
+        dest: "{{ temp_folder }}/{{ alloy_tar_name }}"
+        owner: root
+        group: root
+        mode: "0644"
 
-- name: Скопировать "{{ alloy_config_file }}"
-  ansible.builtin.template:
-    src: "{{ alloy_config_file }}.j2"
-    dest: "{{ alloy_config_folder }}/{{ alloy_config_file }}"
-    owner: "{{ alloy_username }}"
-    group: "{{ alloy_username }}"
-    mode: "0644"
-    backup: true
+    - name: Распаковать Alloy в "{{ temp_folder }}"
+      ansible.builtin.unarchive:
+        src: "{{ temp_folder }}/{{ alloy_tar_name }}"
+        dest: "{{ temp_folder }}"
+        remote_src: true
 
-# ================================================================
-#                      Рабочая директория Alloy
-# ================================================================
+    - name: Скопировать Alloy в "{{ alloy_install_folder }}"
+      become: true
+      ansible.builtin.copy:
+        src: "{{ temp_folder }}/alloy-linux-amd64"
+        dest: "{{ alloy_install_folder }}/alloy"
+        owner: root
+        group: root
+        mode: "0755"
+        remote_src: true
 
-- name: Создание папку "{{ alloy_working_folder }}"
-  ansible.builtin.file:
-    path: "{{ alloy_working_folder }}"
-    state: directory
-    owner: "{{ alloy_username }}"
-    group: "{{ alloy_username }}"
-    mode: "0755"
+    # ============================================
+    #              Environment Alloy
+    # ============================================
 
-# ================================================================
-#                       Скопировать alloy.service
-# ================================================================
+    - name: Создание папку "{{ alloy_environment_folder }}"
+      ansible.builtin.file:
+        path: "{{ alloy_environment_folder }}"
+        state: directory
+        owner: "{{ alloy_username }}"
+        group: "{{ alloy_username }}"
+        mode: "0755"
 
-- name: Создание alloy.service
-  ansible.builtin.template:
-    src: alloy.service.j2
-    dest: "/etc/systemd/system/alloy.service"
-    owner: root
-    group: root
-    mode: "0644"
+    - name: Скопировать environment file в "{{ alloy_environment_folder }}"
+      ansible.builtin.template:
+        src: "{{ alloy_environment_file }}.j2"
+        dest: "{{ alloy_environment_folder }}/{{ alloy_environment_file }}"
+        owner: "{{ alloy_username }}"
+        group: "{{ alloy_username }}"
+        mode: "0644"
+
+    # ============================================
+    #             Сконфигурировать Alloy
+    # ============================================
+
+    - name: Создание папку "{{ alloy_config_folder }}"
+      ansible.builtin.file:
+        path: "{{ alloy_config_folder }}"
+        state: directory
+        owner: "{{ alloy_username }}"
+        group: "{{ alloy_username }}"
+        mode: "0755"
+
+    - name: Скопировать "{{ alloy_config_file }}"
+      ansible.builtin.template:
+        src: "{{ alloy_config_file }}.j2"
+        dest: "{{ alloy_config_folder }}/{{ alloy_config_file }}"
+        owner: "{{ alloy_username }}"
+        group: "{{ alloy_username }}"
+        mode: "0644"
+        backup: true
+
+    # ============================================
+    #           Рабочая директория Alloy
+    # ============================================
+
+    - name: Создание папку "{{ alloy_working_folder }}"
+      ansible.builtin.file:
+        path: "{{ alloy_working_folder }}"
+        state: directory
+        owner: "{{ alloy_username }}"
+        group: "{{ alloy_username }}"
+        mode: "0755"
+
+    # ============================================
+    #           Скопировать alloy.service
+    # ============================================
+
+    - name: Создание alloy.service
+      ansible.builtin.template:
+        src: alloy.service.j2
+        dest: "/etc/systemd/system/alloy.service"
+        owner: root
+        group: root
+        mode: "0644"
