Update Install Alloy role

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,9 +1,21 @@
 [defaults]
 host_key_checking = false
-
-# Use the YAML callback plugin.
-# stdout_callback = yaml
 stdout_callback = default
 result_format = yaml
 # Use the stdout_callback when running ad-hoc commands.
 bin_ansible_callbacks = True
+
+# [defaults]
+# stdout_callback = default
+# # Обязательно разрешаем использование callback-плагинов для ad-hoc команд
+# bin_ansible_callbacks = True
+# display_skipped_hosts = False
+# display_ok_hosts = True
+
+# [callback_default]
+# result_format = yaml
+# pretty_results = True
+
+
+
+
