--- a/roles/install-alloy/handlers/main.yaml
+++ b/roles/install-alloy/handlers/main.yaml
@@ -12,7 +12,7 @@
   become: true
   when:
     - alloy_validate.stdout == ""
-    - ansible_os_family != "Altlinux"
+    - ansible_facts.os_family != "Altlinux"
   ansible.builtin.systemd_service:
     name: alloy
     state: restarted
@@ -22,7 +22,7 @@
 - name: Restart Alloy Altlinux
   become: true
   when:
-    - ansible_os_family == "Altlinux"
+    - ansible_facts.os_family == "Altlinux"
   ansible.builtin.systemd_service:
     name: alloy
     state: restarted
