--- a/roles/passwordauthentication-no/tasks/main.yml
+++ b/roles/passwordauthentication-no/tasks/main.yml
@@ -2,7 +2,7 @@
 # tasks PasswordAuthentication No
 
 - name: Block for RedHat
-  when: ansible_os_family == "RedHat" or ansible_os_family == "RED"
+  when: ansible_facts.os_family == "RedHat" or ansible_facts.os_family == "RED"
   become: true
   block:
 
@@ -29,7 +29,7 @@
         - Restart ssh RedHat
 
 - name: Block for Ubuntu
-  when: ansible_os_family == "Debian"
+  when: ansible_facts.os_family == "Debian"
   become: true
   block:
 
