--- a/roles/dns/tasks/main.yml
+++ b/roles/dns/tasks/main.yml
@@ -3,7 +3,7 @@
 
 - name: Block for RedHat
   when:
-    - ansible_os_family == "RedHat" or ansible_os_family == "RED"
+    - ansible_facts.os_family == "RedHat" or ansible_facts.os_family == "RED"
   become: true
   block:
 
@@ -31,7 +31,7 @@
 
 - name: Block for Ubuntu
   when:
-    - ansible_os_family == "Debian"
+    - ansible_facts.os_family == "Debian"
   become: true
   block:
 
