--- a/roles/chrony/tasks/main.yml
+++ b/roles/chrony/tasks/main.yml
@@ -4,7 +4,7 @@
 - name: Block for RedHat
   when:
     - ansible_facts.os_family == "RedHat" or ansible_facts.os_family == "RED"
-    - ansible_virtualization_type != "lxc"
+    - ansible_facts.virtualization_type != "lxc"
   become: true
   block:
 
@@ -25,7 +25,7 @@
         - Restart Chrony RedHat
 
 - name: Block for Ubuntu
-  when: 
+  when:
     - ansible_facts.os_family == "Debian"
     - ansible_facts.virtualization_type != "lxc"
   become: true
