--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,14 @@ inventory/wgs_servers.ini
 
 inventory/
 group_vars/
+
+*.zip
+*.tgz
+*.tar.gz
+*.tar.bz2
+*.tar.xz
+*.tar.lzma
+*.tar.lz
+*.tar.lz4
+*.tar.zstd
+*.tar.zstd
